Update page fault measuring code

--- a/memory/Makefile
+++ b/memory/Makefile
@@ -1,7 +1,7 @@
 all: results
 
-build: bandwidth.ex ram_access.ex
-debug: bandwidth.debug ram_access.debug
+build: bandwidth.ex ram_access.ex page_fault.ex
+debug: bandwidth.debug ram_access.debug page_fault.debug
 
 %.ex: %.c
 	gcc --std=c99 $< -o $@
