Make changes to work on Ubuntu

--- a/filesystem/Makefile
+++ b/filesystem/Makefile
@@ -1,20 +1,22 @@
+CC=gcc
+
 all:
 	@echo "Nothing Yet"
 
 .SECONDARY:
 
 %.o: %.c %.h
-	clang -c $*.c
+	$(CC) -std=c99 -c $*.c
 
 %.ex: %.c common.o
-	clang $^ -o $@
+	$(CC) -std=c99 -pthread $^ -o $@
 
 measure_read: measure_read.ex 100.raw 1000.raw 10000.raw 100000.raw 1000000.raw
 	@mkdir -p data
 	@mkdir -p plots
 	python measure_read.py
 
-measure_cache: measure_cache.ex 31250000.raw
+measure_cache: measure_cache.ex 15625000.raw
 	@mkdir -p data
 	@mkdir -p plots
 	python measure_cache.py
@@ -27,7 +29,6 @@ measure_contention: measure_contention.ex 10000.raw
 
 %.raw:
 	dd if=/dev/urandom of=$*.raw bs=1024 count=$*
-#dd if=/dev/urandom of=$*.raw bs=1024 count=$* status=progress
 
 clean:
 	rm -rf ./*.o ./*.ex __pycache__
