Add peak bandwidth measurement

--- a/network/Makefile
+++ b/network/Makefile
@@ -10,4 +10,9 @@ rtt: rtt.ex
 	mkdir -p data
 	@echo "Make sure that the echo servers are running"
 	python rtt.py
-	
+
+peak_bandwidth: peak_bandwidth.ex
+	mkdir -p data
+	@echo "Make sure that the echo servers are running"
+	python peak_bandwidth.py
+
